# NRCLex

./: .gitignore  COMPATIBILITY.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml
nrclex/: __init__.py  core.py
nrclex/data/: __init__.py
tests/: test_nrclex_integration.py  test_nrclex_unit.py
