[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NRCLex"
version = "4.1.0"
description = "An affect generator based on TextBlob and the NRC affect lexicon."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "metalcorebear", email = "mark.mbailey@gmail.com" }]
dependencies = [
  "textblob>=0.17",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/metalcorebear/NRCLex"

[tool.setuptools]
packages = ["nrclex", "nrclex.data"]
include-package-data = true

[tool.setuptools.package-data]
nrclex = ["data/nrc_en.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: tests requiring TextBlob corpora",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
